--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 4 JS-hand in</title>
+  <title>Week 4 JS-hand in</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS v5.2.1 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
 </head>
+
 <body>
-    
+  <header>
+    <!-- place navbar here -->
+  </header>
+  <main>
     <h1>Week 4 Hand-in for</h1>
     <ul class="bg-dark">
         <li>Jacob Kristensen</li>
@@ -16,14 +27,28 @@
     <p>None of the exercises given day-1 involved a browser,just make sure they are included in a folder in your github repo</p>
     <h2>JS Week5, day2-Exercises</hæ2>
     <ul>
-        <li><a href="js-day2-ex1.html">Exercise-1</a></li>
-        <li><a href="js-day2-ex2.html">Exercise-2</a></li>
-        <li><a href="js-day2-ex3.html">Exercise-3</a></li>
-        <li><a href="js-day2-ex4.html">Exercise-4</a></li>
-        <li><a href="js-day2-ex5.html">Exercise-5</a></li>
-    </ul>
-    <h3>GitHub</h3>
-    <a href="#">Here you should add a link to your PERSONAL GitHub repo</a>
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+        <div class="btn-group me-2" role="group" aria-label="First group">
+         <a href="js-day2-1.html"> <button type="button" class="btn btn-primary">1</button></a>
+         <a href="js-day2-2.html"> <button type="button" class="btn btn-primary">2</button></a>
+         <a href="js-day2-3.html"> <button type="button" class="btn btn-primary">3</button></a>
+         <a href="js-day2-4.html"> <button type="button" class="btn btn-primary">4</button></a>
+         <a href="js-day2-5.html"> <button type="button" class="btn btn-primary">5</button></a>
 
+         <a href="https://github.com/Jacobtkristensen/week4-JS">Github</a>
+         
+        </div>
+  </main>
+  <footer>
+    <!-- place footer here -->
+  </footer>
+  <!-- Bootstrap JavaScript Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+  </script>
 </body>
-</html>
+
