--- a/js_day2/js-day2-2.html
+++ b/js_day2/js-day2-2.html
@@ -35,7 +35,11 @@
       <div id="d9"class="my-div"></div>
       <div id="d10"class="my-div"></div>
 </div>
-<h6></h6>
+<h3>Reflections</h3>
+    <div style="border: 1px solid black; border-radius: 5px;padding: 1em;">
+        Replace with a descriptiton that clearly show that you understand the concept of event bubbling, and how you have used it in your solution<br>
+        Feel free to write in danish
+    </div>
   </main>
   <footer>
     <!-- place footer here -->
