--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
   <main>
     <h1>Week 4 Hand-in for</h1>
-    <ul class="bg-dark">
+    <ul class="bg-gradient">
         <li>Jacob Kristensen</li>
         <li>jaco170w</li>
     </ul>
@@ -27,17 +27,19 @@
     <p>None of the exercises given day-1 involved a browser,just make sure they are included in a folder in your github repo</p>
     <h2>JS Week5, day2-Exercises</hæ2>
     <ul>
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+      <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group me-2" role="group" aria-label="First group">
-         <a href="js-day2-1.html"> <button type="button" class="btn btn-primary">1</button></a>
-         <a href="js-day2-2.html"> <button type="button" class="btn btn-primary">2</button></a>
-         <a href="js-day2-3.html"> <button type="button" class="btn btn-primary">3</button></a>
-         <a href="js-day2-4.html"> <button type="button" class="btn btn-primary">4</button></a>
-         <a href="js-day2-5.html"> <button type="button" class="btn btn-primary">5</button></a>
-
-         <a href="https://github.com/Jacobtkristensen/week4-JS">Github</a>
-         
+            <a href="js_day2/js-day2-1.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 1</button></a>
+            <a href="js_day2/js-day2-2.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 2</button></a>
+            <a href="js_day2/js-day2-3.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 3</button></a>
+            <a href="js_day2/js-day2-4.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 4</button></a>
+            <a href="js_day2/js-day2-5.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 5</button></a>
         </div>
+    </div>
+    <div class="my-4">
+    <a href="https://github.com/Jacobtkristensen/week4-JS"class="mt-5" > <button type="button" class="btn btn-dark">Github</button></a>
+  </div>
+    
   </main>
   <footer>
     <!-- place footer here -->
