--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <!-- place navbar here -->
   </header>
-  <main>
+  <main class="mx-2">
     <h1>Week 4 Hand-in for</h1>
     <ul class="bg-gradient">
         <li>Jacob Kristensen</li>
