--- a/js_day2/js-day2-2.html
+++ b/js_day2/js-day2-2.html
@@ -41,6 +41,7 @@
         Feel free to write in danish
     </div>
   </main>
+  <div class="mt-1"><a href="/"class="mx-1"> <button type="button" class="btn btn-primary">Back</button></a></div>
   <footer>
     <!-- place footer here -->
   </footer>
