--- a/js_day2/js-day2-3.html
+++ b/js_day2/js-day2-3.html
@@ -42,6 +42,7 @@
     </ul>
     Feel free to write in danish
 </div>
+<div class="mt-1"><a href="/"class="mx-1 "> <button type="button" class="btn btn-primary">Back</button></a></div>
   </main>
    <!-- Optional JavaScript; choose one of the two! -->
   <script>
