--- a/js_day2/js-day2-4.html
+++ b/js_day2/js-day2-4.html
@@ -33,6 +33,8 @@
   Reflect on when you would use a <b>select-element</b>. For a few (perhaps max 10) or many more possible options?<br>
   Explain in words that clearly show that you understand what you did to solve this problem
 </div>
+<div class="mt-1"><a href="/"class="mx-1"> <button type="button" class="btn btn-primary">Back</button></a></div>
+
   </main>
   <footer>
     <!-- place footer here -->
