--- a/js_day2/js-day2-5.html
+++ b/js_day2/js-day2-5.html
@@ -46,6 +46,8 @@
             </ul>
             Feel free to write in danish
         </div>
+<div class="mt-1"></div><a href="/"class="mx-1"> <button type="button" class="btn btn-primary">Back</button></a></div>
+
   </main>
   <footer>
     <!-- place footer here -->
