--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <h2>JS Week5, day1-Exercises</h2>
     <p>None of the exercises given day-1 involved a browser,just make sure they are included in a folder in your github repo</p>
     <h2>JS Week5, day2-Exercises</hæ2>
-    <ul>
-      <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group me-2" role="group" aria-label="First group">
+    <div class ="mt-2">
             <a href="js_day2/js-day2-1.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 1</button></a>
             <a href="js_day2/js-day2-2.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 2</button></a>
             <a href="js_day2/js-day2-3.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 3</button></a>
@@ -37,7 +35,7 @@
         </div>
     </div>
     <div class="my-4">
-    <a href="https://github.com/Jacobtkristensen/week4-JS"class="mt-5" > <button type="button" class="btn btn-dark">Github</button></a>
+    <a href="https://github.com/Jacobtkristensen/week4-JS"class="mx-1 mt-5" target="_blank"> <button type="button" class="btn btn-dark">Github</button></a>
   </div>
     
   </main>
