--- a/js_day2/js-day2-1.html
+++ b/js_day2/js-day2-1.html
@@ -25,8 +25,7 @@
     <button class="btn btn-primary mt-1" type="button">Change Colors</button> 
 
     <div class="mt-2" style="border: 1px solid black; border-radius: 5px;padding: 1em;">
-      Reflect on when you would use a <b>select-element</b>. For a few (perhaps max 10) or many more possible options?<br>
-      Explain in words that clearly show that you understand what you did to solve this problem
+      <h3>Reflections</h3>
     </div>
    </main>
 <div class="mt-1"><a href="/"class="mx-1"> <button type="button" class="btn btn-primary">Back</button></a></div>
