--- a/js_day2/js-day2-4.html
+++ b/js_day2/js-day2-4.html
@@ -30,8 +30,11 @@
    
 <div style="border: 1px solid black; border-radius: 5px;padding: 1em;">
   <h3>Reflections</h3>
-  Reflect on when you would use a <b>select-element</b>. For a few (perhaps max 10) or many more possible options?<br>
-  Explain in words that clearly show that you understand what you did to solve this problem
+  Er ofte en god løsning, når man har begrænset plads. <br>
+  Det kan også benyttes hvis man har få valgmuligheder i givent scenarie, e.g. en dropdown menu med 3-4 valgmuligheder. <br>
+  I dette tilfælde er der oprettet et select element med car-selector som id. H4 med id car-make, som skal vise resultatet af dropdown valg.<br>
+  så er der oprettet en array med bilmærker, som er blevet itereret over med map metoden og indsat i car-selector. <br>
+
 </div>
 <div class="mt-1"><a href="/"class="mx-1"> <button type="button" class="btn btn-primary">Back</button></a></div>
 
