--- a/js_day2/js-day2-3.html
+++ b/js_day2/js-day2-3.html
@@ -35,7 +35,7 @@
   <div style="border: 1px solid black; border-radius: 5px;padding: 1em;">
     Replace this with your explanation of the concepts</br>
     <ul>
-        <li>Where and why you used the event-method <code>preventDefault()</code></li>
+        <li>Where and why you used the event-method preventDefault()</li>
         <li>Even if not done in this exercise, what do you have to be aware of when using the innerHTML field</li>
         <li>How did you change the DOM-list with all the names when you added, removed a name?<br>
              By manipulating a single DOM element, or by rebuilding the whole UL using the new version of the data</li>
