--- a/js_day2/js-day2-2.html
+++ b/js_day2/js-day2-2.html
@@ -25,16 +25,17 @@
     <h1>Exercise 2</h1>
     <div id="outer">
       <div id="d1" class="my-div"></div>
-      <div id="d2"class="my-div"></div>
-      <div id="d3"class="my-div"></div>
-      <div id="d4"class="my-div"></div>
-      <div id="d5"class="my-div"></div>
-      <div id="d6"class="my-div"></div>
-      <div id="d7"class="my-div"></div>
-      <div id="d8"class="my-div"></div>
-      <div id="d9"class="my-div"></div>
-      <div id="d10"class="my-div"></div>
+      <div id="d2" class="my-div"></div>
+      <div id="d3" class="my-div"></div>
+      <div id="d4" class="my-div"></div>
+      <div id="d5" class="my-div"></div>
+      <div id="d6" class="my-div"></div>
+      <div id="d7" class="my-div"></div>
+      <div id="d8" class="my-div"></div>
+      <div id="d9" class="my-div"></div>
+      <div id="d10" class="my-div"></div>
 </div>
+<h6 class="text-center"></h6>
 <h3>Reflections</h3>
     <div style="border: 1px solid black; border-radius: 5px;padding: 1em;">
         Replace with a descriptiton that clearly show that you understand the concept of event bubbling, and how you have used it in your solution<br>
