--- a/index.html
+++ b/index.html
@@ -23,19 +23,28 @@
         <li>Jacob Kristensen</li>
         <li>jaco170w</li>
     </ul>
-    <h2>JS Week5, day1-Exercises</h2>
+    <h2>JS day1-Exercises</h2>
     <p>None of the exercises given day-1 involved a browser,just make sure they are included in a folder in your github repo</p>
-    <h2>JS Week5, day2-Exercises</hæ2>
-    <div class ="mt-2">
-            <a href="js_day2/js-day2-1.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 1</button></a>
-            <a href="js_day2/js-day2-2.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 2</button></a>
-            <a href="js_day2/js-day2-3.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 3</button></a>
-            <a href="js_day2/js-day2-4.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 4</button></a>
-            <a href="js_day2/js-day2-5.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 5</button></a>
-        </div>
+    <h2>JS day2-Exercises</hæ2>
+    <div class ="mt-1">
+      <a href="js_day2/js-day2-1.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 1</button></a>
+      <a href="js_day2/js-day2-2.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 2</button></a>
+      <a href="js_day2/js-day2-3.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 3</button></a> 
+      <a href="js_day2/js-day2-4.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 4</button></a>
+      <a href="js_day2/js-day2-5.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 5</button></a>
     </div>
+    <h2>JS day3-Exercises</h2>
+    <div class ="mt-2">
+      <a href="js_day2/js-day3-1.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 1</button></a>
+      <a href="js_day2/js-day3-2.html"class="mx-2"> <button type="button" class="btn btn-primary">Exercise 2</button></a>
+      <a href="js_day2/js-day3-3.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 3</button></a>
+      <a href="js_day2/js-day3-4.html"class="mx-2"> <button type="button" class="btn btn-primary">Exercise 4</button></a>
+
+    </div>
+          
+  
     <div class="my-4">
-    <a href="https://github.com/Jacobtkristensen/week4-JS"class="mx-1 mt-5" target="_blank"> <button type="button" class="btn btn-dark">Github</button></a>
+    <a href="https://github.com/Jacobtkristensen/week4-JS"class="mx-1 mt-5" target="_blank"> <button type="button" class="btn btn-warning">Github</button></a>
   </div>
     
   </main>
