--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
     </div>
     <h2>JS day3-Exercises</h2>
     <div class ="mt-2">
-      <a href="js_day2/js-day3-1.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 1</button></a>
-      <a href="js_day2/js-day3-2.html"class="mx-2"> <button type="button" class="btn btn-primary">Exercise 2</button></a>
-      <a href="js_day2/js-day3-3.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 3</button></a>
-      <a href="js_day2/js-day3-4.html"class="mx-2"> <button type="button" class="btn btn-primary">Exercise 4</button></a>
-
+      <a href="js_day3/jsday3-ex1.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 1</button></a>
+      <a href="js_day3/jsday3-ex2.html"class="mx-2"> <button type="button" class="btn btn-primary">Exercise 2</button></a>
+      <a href="js_day3/jsday3-ex3.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 3</button></a>
+    </div>
+    <h2>JS day4-Exercises</h2>
+    <div class ="mt-2">
+      <a href="js_day4/index.html"class="mx-1"> <button type="button" class="btn btn-primary">Exercise 1</button></a>
+      <!-- <a href="js_day4/"class="mx-2"> <button type="button" class="btn btn-primary">Exercise 2</button></a> -->
     </div>
           
   
