--- a/js_day3/jsday3-ex1.html
+++ b/js_day3/jsday3-ex1.html
@@ -35,7 +35,9 @@
                 </tbody>
             </table>
             <p id="user-info"> </p>
+            <div class="mt-1"><a href="/"class="mx-1"> <button type="button" class="btn btn-primary">Back</button></a></div>
             <div class="mt-2" style="border: 1px solid black; border-radius: 5px;padding: 1em;">
+        
               <h3>Reflections</h3>
               YOUR REPLY MUST INCLUDE (in a div on the page for the solution) A "SHORT" description to the following
               <ul>
@@ -46,9 +48,6 @@
               <li>What can and should you do in the last?</li>
             </ul> 
             </div>
-            
-
-          </table>
         </div>
       </body>
 </html>
