--- a/js_day3/jsday3-ex2.html
+++ b/js_day3/jsday3-ex2.html
@@ -102,6 +102,7 @@
         <p>Country: <span id="countryName"></span></p>
         <p>Capital: <span id="capital"></span></p>
     </div>
+    <div class="mt-1"><a href="/"class="mx-1"> <button type="button" class="btn btn-primary">Back</button></a></div>
   </div>
   <div class="reflections">Add your reflections here</div>
   </div>
