--- a/js_day3/jsday3-ex3.html
+++ b/js_day3/jsday3-ex3.html
@@ -27,6 +27,7 @@
 <body style="font-family: sans-serif">
   <div style="margin-top:1em;margin-left: 3%;width: 90%;margin-right: auto;">
     <h2>Car's 'R' Us Client Demo - Version poor ;-)</h2>
+    <div class="mt-1"><a href="/"class="mx-1"> <button type="button" class="btn btn-primary">Back</button></a></div>
     <div class="container-fluid">
       <div class="row row-height-30">
         <!--########################  SHOW ALL CARS OR MEMBERS ########################-->
@@ -98,6 +99,7 @@
         <!--########################  EDIT A CAR OR MEMBER ########################-->
         <div class="col">
           <h3>Edit Car</h3>
+          <p><strong>virker ikke rigtigt.</strong></p>
           <label for="text-for-id2">Id</label>&nbsp;<input id="text-for-id2"/>
           <button id="btn-find-car2">Find</button>
           <p>Show what you find here, and let users edit fields</p>
