--- a/js_day4/index.html
+++ b/js_day4/index.html
@@ -23,7 +23,8 @@
       <button id="menu-btn-add" class="btn btn-dark">Add Car</button>
       <button id="menu-btn-edit" class="btn btn-dark">Edit Car</button>
     </div>
-    <div id="content" />
+    <div id="content" ></div>
+    <div class="mt-1"><a href="/"class="mx-1"> <button type="button" class="btn btn-primary">Back to index</button></a></div>
 
 </body>
 
