--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     <div class="my-4">
     <a href="https://github.com/Jacobtkristensen/week4-JS"class="mx-1 mt-5" target="_blank"> <button type="button" class="btn btn-warning">Github</button></a>
   </div>
-    
+    <div class="my-4"> 
+      <p>nogle elementer og refleksionsopgaverne har jeg ikke haft tid, da jeg prøvede at nå lidt af alle opgaverne.</p> 
+    </div>
   </main>
   <footer>
     <!-- place footer here -->
