--- a/js_day4/pages/about.html
+++ b/js_day4/pages/about.html
@@ -6,4 +6,5 @@
   <p> <em>MAKE SURE</em> to create a separate file <b>settings.js</b>, and <code>export</code> the URL to your API from here </p>
      <hr/>
   <h1>JavaScript Rules &#128516; &#128516;</h1>
+  <h2>Kræver en Cars-applikation kørende lokalt</h2>
 </div>
